RESOLVED FIXED271815
ASSERTION FAILED: contentHasNegativeImplicitMargin on reddit.com
https://bugs.webkit.org/show_bug.cgi?id=271815
Summary ASSERTION FAILED: contentHasNegativeImplicitMargin on reddit.com
alan
Reported 2024-03-27 20:34:50 PDT
Attachments
[fast-cq]Patch (4.78 KB, patch)
2024-03-27 20:48 PDT, alan
no flags
alan
Comment 1 2024-03-27 20:48:30 PDT
Created attachment 470634 [details] [fast-cq]Patch
EWS
Comment 2 2024-03-28 06:34:02 PDT
Committed 276774@main (50bd98ed095e): <https://commits.webkit.org/276774@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 470634 [details].
Note You need to log in before you can comment on or make changes to this bug.