ASSERTION FAILED: contentHasNegativeImplicitMargin on reddit.com https://bugs.webkit.org/show_bug.cgi?id=271815 <rdar://125373960>

Reviewed by Antti Koivisto.

Simplified (non-line-builder based) minimum content width logic fails to
ignore collapsed whitespace. In case of whitespace content only (e.g. <div><span> </span></div>)
we end up computing a minimum width value as if the whitespace was preserved -which could produce
a larger min-width value than max-width -> ASSERT.
(Note that this only affects content where arbitrary breaking position is enabled e.g. word-break: break-word)

* LayoutTests/fast/text/minimum-width-with-break-all-and-whitespace-only-expected.html: Added.
* LayoutTests/fast/text/minimum-width-with-break-all-and-whitespace-only.html: Added.
* Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp:
(WebCore::Layout::IntrinsicWidthHandler::simplifiedMinimumWidth const):

Canonical link: https://commits.webkit.org/276774@main