Source/WebCore/layout/formattingContexts/inline/IntrinsicWidthHandler.cpp
@@ -237,13 +237,19 @@ InlineLayoutUnit IntrinsicWidthHandler::simplifiedMinimumWidth(const ElementBox&
 
     for (auto* child = root.firstChild(); child; child = child->nextInFlowSibling()) {
         if (auto* inlineTextBox = dynamicDowncast<InlineTextBox>(*child)) {
+            ASSERT(inlineTextBox->style().whiteSpaceCollapse() != WhiteSpaceCollapse::Preserve);
             auto& fontCascade = inlineTextBox->style().fontCascade();
             auto contentLength = inlineTextBox->content().length();
             size_t index = 0;
+            auto isTreatedAsSpaceCharacter = [&](auto character) {
+                return character == space || character == newlineCharacter || character == tabCharacter;
+            };
             while (index < contentLength) {
                 auto characterLength = TextUtil::firstUserPerceivedCharacterLength(*inlineTextBox, index, contentLength - index);
                 ASSERT(characterLength);
-                maximumWidth = std::max(maximumWidth, TextUtil::width(*inlineTextBox, fontCascade, index, index + characterLength, { }, TextUtil::UseTrailingWhitespaceMeasuringOptimization::No));
+                auto isCollapsedWhitespace = characterLength == 1 && isTreatedAsSpaceCharacter(inlineTextBox->content()[index]);
+                if (!isCollapsedWhitespace)
+                    maximumWidth = std::max(maximumWidth, TextUtil::width(*inlineTextBox, fontCascade, index, index + characterLength, { }, TextUtil::UseTrailingWhitespaceMeasuringOptimization::No));
                 index += characterLength;
             }
             continue;
